# Drubot

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yaml
.github/workflows/: rust.yml
backend/: .gitignore  Cargo.toml
backend/src/: logging.rs  main.rs
backend/src/api/: common.rs  mod.rs  websocket.rs
containers/caddy/: Caddyfile
containers/caddy/site/: index.html
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: Websocket.tsx
