[package]
name = "drubot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
jsonwebtoken = "8.0"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
candle-core = { version = "0.3.0" }
tracing-appender = "0.2"
dirs = "5.0.1"
file-rotate = "0.7.5"
bytesize = "1.3.0"
log = "0.4"

[features]
# Enables parallel processing support by enabling the "rayon" feature of jpeg-decoder.
cuda = ["candle-core/cuda"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
